wrapped counter in parenthesis with CSS, fixed deleting highlights from book view updating count, reworked counter system, added the view for deleted list, reintroduced delete highlight button, removed view-template (now works through querySelector)

--- a/style.css
+++ b/style.css
@@ -246,6 +246,14 @@ button {
   animation: pulse 3s infinite;
 }
 
+.count:before {
+  content: ' (';
+}
+
+.count:after {
+  content: ')';
+}
+
 /* At Rules */
 
 @font-face {
